--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,16 +21,14 @@ jobs:
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: rust-docs/package-lock.json
+          cache-dependency-path: package-lock.json
 
       - name: Install Dependencies
         run: |
-          cd rust-docs
           npm ci
 
       - name: Build Documentation
         run: |
-          cd rust-docs
           npm run build
 
       - name: Deploy to GitHub Pages
