--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "clsx": "^2.1.0",
     "prism-react-renderer": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remark-mermaid": "^0.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
